<resources>
    <string name="app_name">Airytics</string>
    <string name="home_title">Home</string>
    <string name="favourite_title">Favourite</string>
    <string name="alert_title">Alert</string>
    <string name="setting_title">Setting</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="location">Location</string>
    <string name="day_details">17 SEP 24</string>
    <string name="_28">28°</string>
    <string name="sunny_day">Sunny</string>
    <string name="sunrise">06:00 AM</string>
    <string name="sunset">07:00 PM</string>
    <string name="percentage">%</string>
    <string name="cloud">cloud</string>
    <string name="_77">%</string>
    <string name="humidity">Humidity</string>
    <string name="wind">Wind</string>
    <string name="windms">6 m/sec</string>
    <string name="pressure">Pressure</string>
    <string name="_1021_hpa">1015 hpa</string>
    <string name="today">Today</string>
    <string name="hour">4 PM</string>
    <string name="day">Day</string>
    <string name="_23_13_c">23/13°C</string>
    <string name="favplaces">Your Favourite Places</string>
    <string name="gps">GPS</string>
    <string name="map">Map</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="meter_sec">m/sec</string>
    <string name="mile_hour">mile/hr</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="notifications">Notifications</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="temperature">Temperature</string>
    <string name="celsius">Celsius</string>
    <string name="kelvin">Kelvin</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="clock">04:35 PM</string>
    <string name="notification">Notification</string>
    <string name="overlay_permission_is_required_for_alert">Overlay Permission Is Required</string>
    <string name="notification_permission">Notification Permission Is Required</string>
    <string name="add_alert">Add Alert</string>
    <string name="tomo">Tomorrow</string>
    <string name="k">K</string>
    <string name="f">F</string>
    <string name="c">C</string>
    <string name="ok">OK</string>
    <string name="save">Save</string>
    <string name="hpa">hpa</string>
    <string name="searching">"Search "</string>
    <string name="stop">Stop</string>
    <string name="add_alarm">Add Alarm</string>
    <string name="check">Let\'s check the weather</string>

    <string-array name="countries">
            <item>Afghanistan</item>
            <item>Albania</item>
            <item>Algeria</item>
            <item>Andorra</item>
            <item>Angola</item>
            <item>Antigua and Barbuda</item>
            <item>Argentina</item>
            <item>Armenia</item>
            <item>Australia</item>
            <item>Austria</item>
            <item>Azerbaijan</item>
            <item>Bahamas</item>
            <item>Bahrain</item>
            <item>Bangladesh</item>
            <item>Barbados</item>
            <item>Belarus</item>
            <item>Belgium</item>
            <item>Belize</item>
            <item>Benin</item>
            <item>Bhutan</item>
            <item>Bolivia</item>
            <item>Bosnia and Herzegovina</item>
            <item>Botswana</item>
            <item>Brazil</item>
            <item>Brunei</item>
            <item>Bulgaria</item>
            <item>Burkina Faso</item>
            <item>Burundi</item>
            <item>Cabo Verde</item>
            <item>Cambodia</item>
            <item>Cameroon</item>
            <item>Canada</item>
            <item>Central African Republic</item>
            <item>Chad</item>
            <item>Chile</item>
            <item>China</item>
            <item>Colombia</item>
            <item>Comoros</item>
            <item>Congo (Congo-Brazzaville)</item>
            <item>Costa Rica</item>
            <item>Croatia</item>
            <item>Cuba</item>
            <item>Cyprus</item>
            <item>Czechia (Czech Republic)</item>
            <item>Democratic Republic of the Congo</item>
            <item>Denmark</item>
            <item>Djibouti</item>
            <item>Dominica</item>
            <item>Dominican Republic</item>
            <item>Ecuador</item>
            <item>Egypt</item>
            <item>El Salvador</item>
            <item>Equatorial Guinea</item>
            <item>Eritrea</item>
            <item>Estonia</item>
            <item>Eswatini (fmr. "Swaziland")</item>
            <item>Ethiopia</item>
            <item>Fiji</item>
            <item>Finland</item>
            <item>France</item>
            <item>Gabon</item>
            <item>Gambia</item>
            <item>Georgia</item>
            <item>Germany</item>
            <item>Ghana</item>
            <item>Greece</item>
            <item>Grenada</item>
            <item>Guatemala</item>
            <item>Guinea</item>
            <item>Guinea-Bissau</item>
            <item>Guyana</item>
            <item>Haiti</item>
            <item>Honduras</item>
            <item>Hungary</item>
            <item>Iceland</item>
            <item>India</item>
            <item>Indonesia</item>
            <item>Iran</item>
            <item>Iraq</item>
            <item>Ireland</item>
            <item>Israel</item>
            <item>Italy</item>
            <item>Ivory Coast</item>
            <item>Jamaica</item>
            <item>Japan</item>
            <item>Jordan</item>
            <item>Kazakhstan</item>
            <item>Kenya</item>
            <item>Kiribati</item>
            <item>Kuwait</item>
            <item>Kyrgyzstan</item>
            <item>Laos</item>
            <item>Latvia</item>
            <item>Lebanon</item>
            <item>Lesotho</item>
            <item>Liberia</item>
            <item>Libya</item>
            <item>Liechtenstein</item>
            <item>Lithuania</item>
            <item>Luxembourg</item>
            <item>Madagascar</item>
            <item>Malawi</item>
            <item>Malaysia</item>
            <item>Maldives</item>
            <item>Mali</item>
            <item>Malta</item>
            <item>Marshall Islands</item>
            <item>Mauritania</item>
            <item>Mauritius</item>
            <item>Mexico</item>
            <item>Micronesia</item>
            <item>Moldova</item>
            <item>Monaco</item>
            <item>Mongolia</item>
            <item>Montenegro</item>
            <item>Morocco</item>
            <item>Mozambique</item>
            <item>Myanmar (formerly Burma)</item>
            <item>Namibia</item>
            <item>Nauru</item>
            <item>Nepal</item>
            <item>Netherlands</item>
            <item>New Zealand</item>
            <item>Nicaragua</item>
            <item>Niger</item>
            <item>Nigeria</item>
            <item>North Korea</item>
            <item>North Macedonia</item>
            <item>Norway</item>
            <item>Oman</item>
            <item>Pakistan</item>
            <item>Palau</item>
            <item>Panama</item>
            <item>Papua New Guinea</item>
            <item>Paraguay</item>
            <item>Peru</item>
            <item>Philippines</item>
            <item>Poland</item>
            <item>Portugal</item>
            <item>Qatar</item>
            <item>Romania</item>
            <item>Russia</item>
            <item>Rwanda</item>
            <item>Saint Kitts and Nevis</item>
            <item>Saint Lucia</item>
            <item>Saint Vincent and the Grenadines</item>
            <item>Samoa</item>
            <item>San Marino</item>
            <item>Sao Tome and Principe</item>
            <item>Saudi Arabia</item>
            <item>Senegal</item>
            <item>Serbia</item>
            <item>Seychelles</item>
            <item>Sierra Leone</item>
            <item>Singapore</item>
            <item>Slovakia</item>
            <item>Slovenia</item>
            <item>Solomon Islands</item>
            <item>Somalia</item>
            <item>South Africa</item>
            <item>South Korea</item>
            <item>South Sudan</item>
            <item>Spain</item>
            <item>Sri Lanka</item>
            <item>Sudan</item>
            <item>Suriname</item>
            <item>Sweden</item>
            <item>Switzerland</item>
            <item>Syria</item>
            <item>Taiwan</item>
            <item>Tajikistan</item>
            <item>Tanzania</item>
            <item>Thailand</item>
            <item>Timor-Leste</item>
            <item>Togo</item>
            <item>Tonga</item>
            <item>Trinidad and Tobago</item>
            <item>Tunisia</item>
            <item>Turkey</item>
            <item>Turkmenistan</item>
            <item>Tuvalu</item>
            <item>Uganda</item>
            <item>Ukraine</item>
            <item>United Arab Emirates</item>
            <item>United Kingdom</item>
            <item>United States of America</item>
            <item>Uruguay</item>
            <item>Uzbekistan</item>
            <item>Vanuatu</item>
            <item>Vatican City</item>
            <item>Venezuela</item>
            <item>Vietnam</item>
            <item>Yemen</item>
            <item>Zambia</item>
            <item>Zimbabwe</item>
        </string-array>

    </resources>


