<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context=".homefrag.HomeFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ProgressBar
            android:id="@+id/pr_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="40dp"
            android:visibility="gone"
            />

        <ImageView
            android:id="@+id/iv_near_me"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_location_name"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/near_me_ic"
            android:visibility="gone"
            android:clickable="true"/>

<!--        <com.airbnb.lottie.LottieAnimationView-->
<!--            android:id="@+id/loading_lottie"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="parent"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            app:lottie_autoPlay="true"-->
<!--            app:lottie_loop="true"-->
<!--            app:lottie_rawRes="@raw/splash1"-->
<!--            android:visibility="gone"-->
<!--            />-->

        <TextView
            android:id="@+id/tv_location_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:elevation="10dp"
            android:text="@string/location"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:maxWidth="250dp"
            android:maxHeight="100dp"/>

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/day_details"
            android:textColor="@color/white"
            android:textSize="13sp"
            app:layout_constraintStart_toStartOf="@id/tv_location_name"
            app:layout_constraintTop_toBottomOf="@id/tv_location_name" />

        <ImageView
            android:id="@+id/iv_weather"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginStart="88dp"
            android:layout_marginTop="4dp"
            android:elevation="9dp"
            android:scaleType="fitCenter"
            android:src="@drawable/cast"
            app:layout_constraintStart_toStartOf="@id/tv_location_name"
            app:layout_constraintTop_toBottomOf="@id/tv_date" />

        <TextView
            android:id="@+id/tv_current_degree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            android:elevation="10dp"
            android:text="@string/_28"
            android:textColor="@color/white"
            android:textSize="40sp"
            app:layout_constraintEnd_toStartOf="@+id/iv_weather"
            app:layout_constraintHorizontal_bias="0.807"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/iv_weather" />

        <TextView
            android:id="@+id/tv_weather_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="36dp"
            android:text="@string/sunny_day"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/iv_weather"
            app:layout_constraintStart_toStartOf="@+id/tv_current_degree"
            app:layout_constraintTop_toBottomOf="@id/tv_current_degree" />

        <ImageView
            android:id="@+id/sunRise"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:elevation="9dp"
            android:scaleType="fitCenter"
            android:src="@drawable/sunrise"
            app:layout_constraintStart_toEndOf="@id/iv_weather"
            app:layout_constraintTop_toTopOf="@id/iv_weather" />

        <TextView
            android:id="@+id/tv_sunRise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sunrise"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@id/sunRise"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@id/sunRise"
            app:layout_constraintTop_toTopOf="@+id/sunRise" />

        <ImageView
            android:id="@+id/sunSet"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="40dp"
            android:elevation="9dp"
            android:scaleType="fitCenter"
            android:src="@drawable/sunset"
            app:layout_constraintBottom_toBottomOf="@id/iv_weather"
            app:layout_constraintStart_toEndOf="@id/iv_weather" />

        <TextView
            android:id="@+id/tv_sunSet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sunset"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@id/sunSet"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@id/sunSet"
            app:layout_constraintTop_toTopOf="@+id/sunSet" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/white"
            app:cardCornerRadius="25dp"
            app:cardElevation="10dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_weather_status"
            app:strokeWidth="0dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingVertical="15dp">

                <ImageView
                    android:id="@+id/iv_cloud"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="8dp"
                    android:src="@drawable/cloud"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_dynamic_cloud"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/percentage"
                    android:textColor="@color/blue"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:fontFamily="@font/lato_regular"
                    app:layout_constraintEnd_toEndOf="@id/iv_cloud"
                    app:layout_constraintStart_toStartOf="@id/iv_cloud"
                    app:layout_constraintTop_toBottomOf="@id/iv_cloud" />

                <TextView
                    android:id="@+id/tv_cloud"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cloud"
                    android:textColor="@color/blue"
                    android:textSize="15sp"
                    android:fontFamily="@font/lato_regular"
                    app:layout_constraintEnd_toEndOf="@id/tv_dynamic_cloud"
                    app:layout_constraintStart_toStartOf="@id/tv_dynamic_cloud"
                    app:layout_constraintTop_toBottomOf="@id/tv_dynamic_cloud" />

                <ImageView
                    android:id="@+id/iv_humidity"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="40dp"
                    android:src="@drawable/humidity"
                    app:layout_constraintStart_toEndOf="@+id/iv_cloud"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_dynamic_humidity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_77"
                    android:textColor="@color/blue"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:fontFamily="@font/lato_regular"
                    app:layout_constraintEnd_toEndOf="@id/iv_humidity"
                    app:layout_constraintStart_toStartOf="@id/iv_humidity"
                    app:layout_constraintTop_toBottomOf="@id/iv_humidity"  />

                <TextView
                    android:id="@+id/tv_humidity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/humidity"
                    android:textColor="@color/blue"
                    android:textSize="15sp"
                    android:fontFamily="@font/lato_regular"
                    app:layout_constraintEnd_toEndOf="@id/tv_dynamic_humidity"
                    app:layout_constraintStart_toStartOf="@id/tv_dynamic_humidity"
                    app:layout_constraintTop_toBottomOf="@id/tv_dynamic_humidity" />

                <ImageView
                    android:id="@+id/iv_wind"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="40dp"
                    android:src="@drawable/wind"
                    app:layout_constraintStart_toEndOf="@+id/iv_humidity"
                    app:layout_constraintTop_toTopOf="@id/iv_humidity" />

                <TextView
                    android:id="@+id/tv_dynamic_wind"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/windms"
                    android:textSize="18sp"
                    android:textColor="@color/blue"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@id/iv_wind"
                    app:layout_constraintStart_toStartOf="@id/iv_wind"
                    app:layout_constraintTop_toBottomOf="@id/iv_wind" />

                <TextView
                    android:id="@+id/tv_wind"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wind"
                    android:textColor="@color/blue"
                    android:textSize="15sp"
                    android:fontFamily="@font/lato_regular"
                    app:layout_constraintEnd_toEndOf="@id/tv_dynamic_wind"
                    app:layout_constraintStart_toStartOf="@id/tv_dynamic_wind"
                    app:layout_constraintTop_toBottomOf="@id/tv_dynamic_wind" />


                <ImageView
                    android:id="@+id/iv_pressure"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginEnd="16dp"
                    android:src="@drawable/pressure"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/iv_wind"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_dynamic_pressure"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato_regular"
                    android:text="@string/_1021_hpa"
                    android:textColor="@color/blue"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@+id/iv_pressure"
                    app:layout_constraintStart_toStartOf="@+id/iv_pressure"
                    app:layout_constraintTop_toBottomOf="@id/iv_pressure" />

                <TextView
                    android:id="@+id/tv_pressure"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato_regular"
                    android:text="@string/pressure"
                    android:textColor="@color/blue"
                    android:textSize="13sp"
                    app:layout_constraintEnd_toEndOf="@+id/tv_dynamic_pressure"
                    app:layout_constraintStart_toStartOf="@+id/tv_dynamic_pressure"
                    app:layout_constraintTop_toBottomOf="@id/tv_dynamic_pressure" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_hours"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cv_details"
            tools:listitem="@layout/item_hours"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_days"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBaseline_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rv_hours"
            tools:listitem="@layout/item_days"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>